fix services, add About Us

--- a/architekt.html
+++ b/architekt.html
@@ -65,11 +65,11 @@
                             </div>
                         </div>
                         <div id="controls">
-                            <label for="switch1"></label>
-                            <label for="switch2"></label>
-                            <label for="switch3"></label>
-                            <label for="switch4"></label>
-                            <label for="switch5"></label>
+                            <label class="switchs" for="switch1"></label>
+                            <label class="switchs" for="switch2"></label>
+                            <label class="switchs" for="switch3"></label>
+                            <label class="switchs" for="switch4"></label>
+                            <label class="switchs" for="switch5"></label>
                         </div>
                      
                     </article>
@@ -82,6 +82,103 @@
                 <div class="intro-text">
                     Lorem ipsum dolor sit amet, consectetur adipiscingelit ut aliquam, purus sit amet 
                 </div>
+            </div>
+        </section>
+        <section class="service">
+            <div class="service-container">
+                <h1 class="service-title">Our Services</h1>
+                <div class="service-cards">
+                    <div class="service-card">
+                        <div class="service-card-img">
+                            <img src="img/svg/services-img-1.svg" alt="picture">
+                        </div>
+                        <h2 class="service-card-title">Planning</h2>
+                        <p class="service-card-text">
+                            Our Services Line one <br>
+                            Servive line two
+                        </p>
+                    </div>
+                    <div class="service-card">
+                        <div class="service-card-img">
+                            <img src="img/svg/services-img-3.svg" alt="picture">
+                        </div>
+                        <h2 class="service-card-title">Planning</h2>
+                        <p class="service-card-text">
+                            Our Services Line one <br>
+                            Servive line two
+                        </p>
+                    </div>
+                    <div class="service-card">
+                        <div class="service-card-img">
+                            <img src="img/svg/services-img-2.svg" alt="picture">
+                        </div>
+                            <h2 class="service-card-title">
+                                Planning
+                            </h2>
+                            <p class="service-card-text">
+                                Our Services Line one <br>
+                                Servive line two
+                            </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="about">
+            <div class="about-container">
+
+                <img src="/img/about-us.jpg" alt="picture" class="about-img">
+
+                <div class="about-content">
+
+                    <h1 class="about-title">
+                        About Us
+                    </h1>
+
+                    <p class="about-text">
+                        Lorem ipsum dolor sit amet, 
+                        consectetur adipiscing elit ut 
+                        aliquam, purus sit amet luctus 
+                        venenatis, lectus magna fringilla 
+                        urna, porttitor
+                    </p>
+
+                    <a class="about-more">
+                        Read more
+                    </a>
+
+                </div>
+
+            </div>
+        </section>
+        <section class="projects">
+            <div class="projects-container">
+
+                <div class="projects-header">
+
+                    <h1 class="projects-title">
+                        Our Projects
+                    </h1>
+
+                    <nav class="projects-nav">
+                        <ul class="projects-list">
+                            <li class="projects-list-item">
+                                <a href="#!">All</a>
+                            </li>
+                            <li class="projects-list-item">
+                                <a href="#!">Furniture</a>
+                            </li>
+                            <li class="projects-list-item">
+                                <a href="#!">Design</a>
+                            </li>
+                            <li class="projects-list-item">
+                                <a href="#!">House</a>
+                            </li>
+                        </ul>
+                    </nav>
+
+
+                </div>
+
             </div>
         </section>
     </main>
