--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         <div class="service-card-img">
                             <img src="img/svg/services-img-3.svg" alt="picture">
                         </div>
-                        <h2 class="service-card-title">Planning</h2>
+                        <h2 class="service-card-title">Interior</h2>
                         <p class="service-card-text">
                             Our Services Line one <br>
                             Servive line two
@@ -116,7 +116,7 @@
                             <img src="img/svg/services-img-2.svg" alt="picture">
                         </div>
                             <h2 class="service-card-title">
-                                Planning
+                                Exterior
                             </h2>
                             <p class="service-card-text">
                                 Our Services Line one <br>
@@ -164,7 +164,7 @@
 
                     <nav class="projects-nav">
                         <ul class="projects-list">
-                            <li class="projects-list-item">
+                            <li class="projects-list-item-1">
                                 <a href="#!">All</a>
                             </li>
                             <li class="projects-list-item">
