--- a/index.html
+++ b/index.html
@@ -164,24 +164,197 @@
 
                     <nav class="projects-nav">
                         <ul class="projects-list">
-                            <li class="projects-list-item-1">
-                                <a href="#!">All</a>
+                            <li class="projects-list-el">
+                                <button class="projects-list-item" data-tab="#projects-tab-1">All</button>
                             </li>
-                            <li class="projects-list-item">
-                                <a href="#!">Furniture</a>
+                            <li class="projects-list-el">
+                                <button class="projects-list-item" data-tab="#projects-tab-2">Furniture</button>
                             </li>
-                            <li class="projects-list-item">
-                                <a href="#!">Design</a>
+                            <li class="projects-list-el">
+                                <button class="projects-list-item" data-tab="#projects-tab-3">Design</button>
                             </li>
-                            <li class="projects-list-item">
-                                <a href="#!">House</a>
+                            <li class="projects-list-el">
+                                <button class="projects-list-item" data-tab="#projects-tab-4">House</button>
                             </li>
                         </ul>
                     </nav>
-
-
                 </div>
-
+                <div class="projects-content" id="projects-tab-1">
+                    <div class="projects-content-el">
+                        <img src="/img/projects-all/projects-1.jpg" alt="picture" class="projects-img">
+                        <p class="projects-text">
+                            Our Services Line one
+                                Servive line two
+                        </p>
+                    </div>
+                    <div class="projects-content-el">
+                        <img src="/img/projects-all/projects-2.jpg" alt="picture" class="projects-img">
+                        <p class="projects-text">
+                            Our Services Line one
+                                Servive line two
+                        </p>
+                    </div>
+                    <div class="projects-content-el">
+                        <img src="/img/projects-all/projects-3.jpg" alt="picture" class="projects-img">
+                        <p class="projects-text">
+                            Our Services Line one
+                                Servive line two
+                        </p>
+                    </div>
+                    <div class="projects-content-el">
+                        <img src="/img/projects-all/projects-4.jpg" alt="picture" class="projects-img">
+                        <p class="projects-text">
+                            Our Services Line one
+                                Servive line two
+                        </p>
+                    </div>
+                    <div class="projects-content-el">
+                        <img src="/img/projects-all/projects-5.jpg" alt="picture" class="projects-img">
+                        <p class="projects-text">
+                            Our Services Line one
+                                Servive line two
+                        </p>
+                    </div>
+                    <div class="projects-content-el">
+                        <img src="/img/projects-all/projects-6.jpg" alt="picture" class="projects-img">
+                        <p class="projects-text">
+                            Our Services Line one
+                                Servive line two
+                        </p>
+                    </div>
+                </div>
+                <div class="projects-content" id="projects-tab-2">
+                    <div class="projects-content-el">
+                        <img src="/img/projects-all/projects-4.jpg" alt="picture" class="projects-img">
+                        <p class="projects-text">
+                            Our Services Line one
+                                Servive line two
+                        </p>
+                    </div>
+                    <div class="projects-content-el">
+                        <img src="/img/projects-all/projects-1.jpg" alt="picture" class="projects-img">
+                        <p class="projects-text">
+                            Our Services Line one
+                                Servive line two
+                        </p>
+                    </div>
+                    <div class="projects-content-el">
+                        <img src="/img/projects-all/projects-2.jpg" alt="picture" class="projects-img">
+                        <p class="projects-text">
+                            Our Services Line one
+                                Servive line two
+                        </p>
+                    </div>
+                    <div class="projects-content-el">
+                        <img src="/img/projects-all/projects-6.jpg" alt="picture" class="projects-img">
+                        <p class="projects-text">
+                            Our Services Line one
+                                Servive line two
+                        </p>
+                    </div>
+                    <div class="projects-content-el">
+                        <img src="/img/projects-all/projects-5.jpg" alt="picture" class="projects-img">
+                        <p class="projects-text">
+                            Our Services Line one
+                                Servive line two
+                        </p>
+                    </div>
+                    <div class="projects-content-el">
+                        <img src="/img/projects-all/projects-4.jpg" alt="picture" class="projects-img">
+                        <p class="projects-text">
+                            Our Services Line one
+                                Servive line two
+                        </p>
+                    </div>
+                </div>
+                <div class="projects-content" id="projects-tab-3">
+                    <div class="projects-content-el">
+                        <img src="/img/projects-all/projects-1.jpg" alt="picture" class="projects-img">
+                        <p class="projects-text">
+                            Our Services Line one
+                                Servive line two
+                        </p>
+                    </div>
+                    <div class="projects-content-el">
+                        <img src="/img/projects-all/projects-2.jpg" alt="picture" class="projects-img">
+                        <p class="projects-text">
+                            Our Services Line one
+                                Servive line two
+                        </p>
+                    </div>
+                    <div class="projects-content-el">
+                        <img src="/img/projects-all/projects-3.jpg" alt="picture" class="projects-img">
+                        <p class="projects-text">
+                            Our Services Line one
+                                Servive line two
+                        </p>
+                    </div>
+                    <div class="projects-content-el">
+                        <img src="/img/projects-all/projects-4.jpg" alt="picture" class="projects-img">
+                        <p class="projects-text">
+                            Our Services Line one
+                                Servive line two
+                        </p>
+                    </div>
+                    <div class="projects-content-el">
+                        <img src="/img/projects-all/projects-5.jpg" alt="picture" class="projects-img">
+                        <p class="projects-text">
+                            Our Services Line one
+                                Servive line two
+                        </p>
+                    </div>
+                    <div class="projects-content-el">
+                        <img src="/img/projects-all/projects-6.jpg" alt="picture" class="projects-img">
+                        <p class="projects-text">
+                            Our Services Line one
+                                Servive line two
+                        </p>
+                    </div>
+                </div>
+                <div class="projects-content" id="projects-tab-4">
+                    <div class="projects-content-el">
+                        <img src="/img/projects-all/projects-6.jpg" alt="picture" class="projects-img">
+                        <p class="projects-text">
+                            Our Services Line one
+                                Servive line two
+                        </p>
+                    </div>
+                    <div class="projects-content-el">
+                        <img src="/img/projects-all/projects-3.jpg" alt="picture" class="projects-img">
+                        <p class="projects-text">
+                            Our Services Line one
+                                Servive line two
+                        </p>
+                    </div>
+                    <div class="projects-content-el">
+                        <img src="/img/projects-all/projects-1.jpg" alt="picture" class="projects-img">
+                        <p class="projects-text">
+                            Our Services Line one
+                                Servive line two
+                        </p>
+                    </div>
+                    <div class="projects-content-el">
+                        <img src="/img/projects-all/projects-5.jpg" alt="picture" class="projects-img">
+                        <p class="projects-text">
+                            Our Services Line one
+                                Servive line two
+                        </p>
+                    </div>
+                    <div class="projects-content-el">
+                        <img src="/img/projects-all/projects-4.jpg" alt="picture" class="projects-img">
+                        <p class="projects-text">
+                            Our Services Line one
+                                Servive line two
+                        </p>
+                    </div>
+                    <div class="projects-content-el">
+                        <img src="/img/projects-all/projects-6.jpg" alt="picture" class="projects-img">
+                        <p class="projects-text">
+                            Our Services Line one
+                                Servive line two
+                        </p>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
