add persons, work persons-tabs

--- a/index.html
+++ b/index.html
@@ -357,6 +357,50 @@
                 </div>
             </div>
         </section>
+        <section class="persons">
+            <div class="persons-container">
+
+                <h1 class="persons-title">Testimonial</h1>
+                <div class="persons-content">
+                    <div class="persons-content-el">
+                        <img src="/img/persons-1.jpg" alt="picture" class="persons-img">
+                        <div class="persons-info">
+                            <h3 class="persons-name">
+                                James Passaquindici Arcand
+                            </h3>
+                            <p class="persons-text">
+                                Lorem ipsum dolor sit amet, 
+                                consectetur adipiscing elit ut 
+                                aliquam, purus sit amet luctus venenatis
+                            </p>
+                        </div>
+                    </div>
+                    <div class="persons-content-el">
+                        <img src="/img/persons-2.jpg" alt="picture" class="persons-img">
+                        <div class="persons-info">
+                            <h3 class="persons-name">
+                                Abram Schleifer
+                            </h3>
+                            <p class="persons-text">
+                                Lorem ipsum dolor sit amet, 
+                                consectetur adipiscing elit ut 
+                                aliquam, purus sit amet luctus venenatis
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="persons-tabs">
+
+                    <span class="persons-radio" onclick=currentSlide(1)>
+                    </span>
+                    <span class="persons-radio" onclick=currentSlide(2)>
+                    </span>
+                    <span class="persons-radio" onclick=currentSlide(3)>
+                    </span>
+
+                </div>
+            </div>
+        </section>
     </main>
 </body>
     <script src="js/main.js"></script>
