--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <section class="about">
             <div class="about-container">
 
-                <img src="/img/about-us.jpg" alt="picture" class="about-img">
+                <img src="img/about-us.jpg" alt="picture" class="about-img">
 
                 <div class="about-content">
 
@@ -181,42 +181,42 @@
                 </div>
                 <div class="projects-content" id="projects-tab-1">
                     <div class="projects-content-el">
-                        <img src="/img/projects-all/projects-1.jpg" alt="picture" class="projects-img">
+                        <img src="img/projects-all/projects-1.jpg" alt="picture" class="projects-img">
                         <p class="projects-text">
                             Our Services Line one
                                 Servive line two
                         </p>
                     </div>
                     <div class="projects-content-el">
-                        <img src="/img/projects-all/projects-2.jpg" alt="picture" class="projects-img">
+                        <img src="img/projects-all/projects-2.jpg" alt="picture" class="projects-img">
                         <p class="projects-text">
                             Our Services Line one
                                 Servive line two
                         </p>
                     </div>
                     <div class="projects-content-el">
-                        <img src="/img/projects-all/projects-3.jpg" alt="picture" class="projects-img">
+                        <img src="img/projects-all/projects-3.jpg" alt="picture" class="projects-img">
                         <p class="projects-text">
                             Our Services Line one
                                 Servive line two
                         </p>
                     </div>
                     <div class="projects-content-el">
-                        <img src="/img/projects-all/projects-4.jpg" alt="picture" class="projects-img">
+                        <img src="img/projects-all/projects-4.jpg" alt="picture" class="projects-img">
                         <p class="projects-text">
                             Our Services Line one
                                 Servive line two
                         </p>
                     </div>
                     <div class="projects-content-el">
-                        <img src="/img/projects-all/projects-5.jpg" alt="picture" class="projects-img">
+                        <img src="img/projects-all/projects-5.jpg" alt="picture" class="projects-img">
                         <p class="projects-text">
                             Our Services Line one
                                 Servive line two
                         </p>
                     </div>
                     <div class="projects-content-el">
-                        <img src="/img/projects-all/projects-6.jpg" alt="picture" class="projects-img">
+                        <img src="img/projects-all/projects-6.jpg" alt="picture" class="projects-img">
                         <p class="projects-text">
                             Our Services Line one
                                 Servive line two
@@ -225,42 +225,42 @@
                 </div>
                 <div class="projects-content" id="projects-tab-2">
                     <div class="projects-content-el">
-                        <img src="/img/projects-all/projects-4.jpg" alt="picture" class="projects-img">
+                        <img src="img/projects-all/projects-4.jpg" alt="picture" class="projects-img">
                         <p class="projects-text">
                             Our Services Line one
                                 Servive line two
                         </p>
                     </div>
                     <div class="projects-content-el">
-                        <img src="/img/projects-all/projects-1.jpg" alt="picture" class="projects-img">
+                        <img src="img/projects-all/projects-1.jpg" alt="picture" class="projects-img">
                         <p class="projects-text">
                             Our Services Line one
                                 Servive line two
                         </p>
                     </div>
                     <div class="projects-content-el">
-                        <img src="/img/projects-all/projects-2.jpg" alt="picture" class="projects-img">
+                        <img src="img/projects-all/projects-2.jpg" alt="picture" class="projects-img">
                         <p class="projects-text">
                             Our Services Line one
                                 Servive line two
                         </p>
                     </div>
                     <div class="projects-content-el">
-                        <img src="/img/projects-all/projects-6.jpg" alt="picture" class="projects-img">
+                        <img src="img/projects-all/projects-6.jpg" alt="picture" class="projects-img">
                         <p class="projects-text">
                             Our Services Line one
                                 Servive line two
                         </p>
                     </div>
                     <div class="projects-content-el">
-                        <img src="/img/projects-all/projects-5.jpg" alt="picture" class="projects-img">
+                        <img src="img/projects-all/projects-5.jpg" alt="picture" class="projects-img">
                         <p class="projects-text">
                             Our Services Line one
                                 Servive line two
                         </p>
                     </div>
                     <div class="projects-content-el">
-                        <img src="/img/projects-all/projects-4.jpg" alt="picture" class="projects-img">
+                        <img src="img/projects-all/projects-4.jpg" alt="picture" class="projects-img">
                         <p class="projects-text">
                             Our Services Line one
                                 Servive line two
@@ -269,42 +269,42 @@
                 </div>
                 <div class="projects-content" id="projects-tab-3">
                     <div class="projects-content-el">
-                        <img src="/img/projects-all/projects-1.jpg" alt="picture" class="projects-img">
+                        <img src="img/projects-all/projects-1.jpg" alt="picture" class="projects-img">
                         <p class="projects-text">
                             Our Services Line one
                                 Servive line two
                         </p>
                     </div>
                     <div class="projects-content-el">
-                        <img src="/img/projects-all/projects-2.jpg" alt="picture" class="projects-img">
+                        <img src="img/projects-all/projects-2.jpg" alt="picture" class="projects-img">
                         <p class="projects-text">
                             Our Services Line one
                                 Servive line two
                         </p>
                     </div>
                     <div class="projects-content-el">
-                        <img src="/img/projects-all/projects-3.jpg" alt="picture" class="projects-img">
+                        <img src="img/projects-all/projects-3.jpg" alt="picture" class="projects-img">
                         <p class="projects-text">
                             Our Services Line one
                                 Servive line two
                         </p>
                     </div>
                     <div class="projects-content-el">
-                        <img src="/img/projects-all/projects-4.jpg" alt="picture" class="projects-img">
+                        <img src="img/projects-all/projects-4.jpg" alt="picture" class="projects-img">
                         <p class="projects-text">
                             Our Services Line one
                                 Servive line two
                         </p>
                     </div>
                     <div class="projects-content-el">
-                        <img src="/img/projects-all/projects-5.jpg" alt="picture" class="projects-img">
+                        <img src="img/projects-all/projects-5.jpg" alt="picture" class="projects-img">
                         <p class="projects-text">
                             Our Services Line one
                                 Servive line two
                         </p>
                     </div>
                     <div class="projects-content-el">
-                        <img src="/img/projects-all/projects-6.jpg" alt="picture" class="projects-img">
+                        <img src="img/projects-all/projects-6.jpg" alt="picture" class="projects-img">
                         <p class="projects-text">
                             Our Services Line one
                                 Servive line two
@@ -313,42 +313,42 @@
                 </div>
                 <div class="projects-content" id="projects-tab-4">
                     <div class="projects-content-el">
-                        <img src="/img/projects-all/projects-6.jpg" alt="picture" class="projects-img">
+                        <img src="img/projects-all/projects-6.jpg" alt="picture" class="projects-img">
                         <p class="projects-text">
                             Our Services Line one
                                 Servive line two
                         </p>
                     </div>
                     <div class="projects-content-el">
-                        <img src="/img/projects-all/projects-3.jpg" alt="picture" class="projects-img">
+                        <img src="img/projects-all/projects-3.jpg" alt="picture" class="projects-img">
                         <p class="projects-text">
                             Our Services Line one
                                 Servive line two
                         </p>
                     </div>
                     <div class="projects-content-el">
-                        <img src="/img/projects-all/projects-1.jpg" alt="picture" class="projects-img">
+                        <img src="img/projects-all/projects-1.jpg" alt="picture" class="projects-img">
                         <p class="projects-text">
                             Our Services Line one
                                 Servive line two
                         </p>
                     </div>
                     <div class="projects-content-el">
-                        <img src="/img/projects-all/projects-5.jpg" alt="picture" class="projects-img">
+                        <img src="img/projects-all/projects-5.jpg" alt="picture" class="projects-img">
                         <p class="projects-text">
                             Our Services Line one
                                 Servive line two
                         </p>
                     </div>
                     <div class="projects-content-el">
-                        <img src="/img/projects-all/projects-4.jpg" alt="picture" class="projects-img">
+                        <img src="img/projects-all/projects-4.jpg" alt="picture" class="projects-img">
                         <p class="projects-text">
                             Our Services Line one
                                 Servive line two
                         </p>
                     </div>
                     <div class="projects-content-el">
-                        <img src="/img/projects-all/projects-6.jpg" alt="picture" class="projects-img">
+                        <img src="img/projects-all/projects-6.jpg" alt="picture" class="projects-img">
                         <p class="projects-text">
                             Our Services Line one
                                 Servive line two
@@ -364,7 +364,7 @@
                 <div class="persons-content">
                     <div class="persons-element persons-element-active" id="ptab-1">
                         <div class="persons-content-el">
-                            <img src="/img/persons-1.jpg" alt="picture" class="persons-img">
+                            <img src="img/persons-1.jpg" alt="picture" class="persons-img">
                             <div class="persons-info">
                                 <h3 class="persons-name">
                                     James Passaquindici Arcand
@@ -377,7 +377,7 @@
                             </div>
                         </div>
                         <div class="persons-content-el">
-                            <img src="/img/persons-2.jpg" alt="picture" class="persons-img">
+                            <img src="img/persons-2.jpg" alt="picture" class="persons-img">
                             <div class="persons-info">
                                 <h3 class="persons-name">
                                     Abram Schleifer
@@ -392,7 +392,7 @@
                     </div>
                     <div class="persons-element" id="ptab-2">
                         <div class="persons-content-el">
-                            <img src="/img/persons-2.jpg" alt="picture" class="persons-img">
+                            <img src="img/persons-2.jpg" alt="picture" class="persons-img">
                             <div class="persons-info">
                                 <h3 class="persons-name">
                                     James Passaquindici Arcand
@@ -405,7 +405,7 @@
                             </div>
                         </div>
                         <div class="persons-content-el">
-                            <img src="/img/persons-1.jpg" alt="picture" class="persons-img">
+                            <img src="img/persons-1.jpg" alt="picture" class="persons-img">
                             <div class="persons-info">
                                 <h3 class="persons-name">
                                     Abram Schleifer
@@ -420,7 +420,7 @@
                     </div>
                     <div class="persons-element" id="ptab-3">
                         <div class="persons-content-el">
-                            <img src="/img/persons-1.jpg" alt="picture" class="persons-img">
+                            <img src="img/persons-1.jpg" alt="picture" class="persons-img">
                             <div class="persons-info">
                                 <h3 class="persons-name">
                                     James Passaquindici Arcand
@@ -433,7 +433,7 @@
                             </div>
                         </div>
                         <div class="persons-content-el">
-                            <img src="/img/persons-2.jpg" alt="picture" class="persons-img">
+                            <img src="img/persons-2.jpg" alt="picture" class="persons-img">
                             <div class="persons-info">
                                 <h3 class="persons-name">
                                     Abram Schleifer
@@ -477,13 +477,13 @@
                     </p>
                     <div class="footer-img">
                         <a href="https://www.instagram.com/?hl=ru" class="footer-img-link">
-                            <img src="/img/svg/facebook.svg" alt="pictures">
+                            <img src="img/svg/facebook.svg" alt="pictures">
                         </a>
                         <a href="https://www.i.ua/" class="footer-img-link">
-                            <img src="/img/svg/twiter.svg" alt="pictures">
+                            <img src="img/svg/twiter.svg" alt="pictures">
                         </a>
                         <a href="https://www.i.ua/" class="footer-img-link">
-                            <img src="/img/svg/instagram.svg" alt="pictures">
+                            <img src="img/svg/instagram.svg" alt="pictures">
                         </a>
                     </div>
 
